--- a/style.css
+++ b/style.css
@@ -10,3 +10,56 @@ a{
 ul{
     list-style: none;
 }
+
+.header{
+    width:100%;
+    height: 60vh;
+    background-color: #fff;
+    position: relative;
+}
+
+.header .navbar{
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content:space-between;
+    align-items:center;
+    position:absolute;
+    margin-top:20px;
+}
+
+.menu ul li{
+    display: inline-block;
+    padding: 0 25px;
+    cursor:  pointer;
+    font-size:20px;
+    font-weight: 700;
+    line-height: 80px;
+    align-items: center;
+}
+
+.login-btn{
+    display:block;
+    font: size 20px;
+    font-weight:700;
+    cursor:pointer;
+    border-radius:30px;
+    background-color:#f3ef51;
+    padding: 8px 40px;
+    margin-right:100px;
+}
+
+.banner{
+    width:80%;
+    height:70%;
+    position:absolute;
+    top:25%;
+    left:150px;
+    color:#fff;
+}
+app-text{
+    width:50%;
+    float:left;
+    padding-left:50px;
+
+}
