--- a/style.css
+++ b/style.css
@@ -57,9 +57,17 @@ ul{
     left:150px;
     color:#fff;
 }
-app-text{
+.app-text{
     width:50%;
     float:left;
     padding-left:50px;
 
+}
+
+.app-text h3{
+    margin-top:100px;
+    font-size:17px;
+    color: #000;
+    letter-spacing:2px;
+    text-transform:uppercase;
 }
