--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
     margin:0;
     padding:0;
     box-sizing: border-box;
+    font-family: 'Nunito', sans-serif;
+
 }
 a{
     text-decoration: none;
@@ -70,4 +72,23 @@ ul{
     color: #000;
     letter-spacing:2px;
     text-transform:uppercase;
+}
+
+.app-text h1{
+    font-size: 51px;
+    position:relative;
+    color:#000;
+    margin-top: 30px;
+    font-weight:700;
+    line-height:1;
+}
+
+.app-text p{
+    font-size: 19px;
+    margin: 30px 30px 30px 0px;
+    letter-spacing: 1px;
+    color: #000;
+    padding-right: 250px;
+
+
 }
