--- a/style.css
+++ b/style.css
@@ -152,3 +152,30 @@ ul{
     margin: 30px auto;
     text-align:center;
 }
+
+.social-icons{
+    position:fixed;
+    right:30px;
+    top:30%;
+}
+
+.social-icons ul li{
+    margin-top:5px;
+    text-align:center;
+
+}
+
+
+.social-icons ul li a{
+
+    color:#000;
+    padding:10px;
+    display:block;
+    font-size:29px;
+}
+
+
+.social-icons ul li a:hover{
+    background-color:#220efb;
+    color:#fff;
+}
